# ldk-flutter

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/io/ldk/f/ldk_flutter/: LdkFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/io/ldk/f/ldk_flutter_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: ldk_flutter.podspec
ios/Classes/: LdkFlutterPlugin.h  LdkFlutterPlugin.m  SwiftLdkFlutterPlugin.swift  bindings.h  ldk_ver.h  lightning.h
lib/: ldk_flutter.dart  ldk_flutter_method_channel.dart  ldk_flutter_platform_interface.dart
lib/src/: ldk_flutter_root.dart  root.dart
lib/src/enums/: AccessError.dart  channel_monitor_update_err.dart  confirmation_target.dart  creation_error.dart  currency.dart  io_error.dart  level.dart  network.dart  recipient.dart  secp_256k1_error.dart  sematic_error.dart
lib/src/models/: ldk_node.dart  ldk_node_args.dart
lib/src/structs/: accept_channel.dart  access.dart  announcement_signatures.dart
lib/src/utils/: enums.dart  exceptions.dart  loader.dart
rust/: Cargo.toml  build.rs  build.sh  config_binary.sh  makefile  unzip.sh
rust/src/: api.rs  bitcoin_client.rs  bitcoind_client.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  core.rs  ffi.rs  file_io.rs  ldk_functions.rs  lib.rs  r_api.rs  serialize.rs  types.rs  utils.rs
rust/src/core/: client.rs
rust/src/utils/: file_io.rs  helper.rs  serialize.rs  types.rs
test/: ldk_flutter_method_channel_test.dart  ldk_flutter_test.dart
