[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-std = ["bitcoin/no-std", "lightning/no-std", "lightning-invoice/no-std", "core2"]
std = ["bitcoin/std", "lightning/std", "lightning-invoice/std"]

[dependencies]
lightning = { version = "0.0.110", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.110", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.18" }
lightning-net-tokio = { version = "0.0.110" }
lightning-persister = { version = "0.0.110" }
lightning-background-processor = { version = "0.0.110" }
lightning-rapid-gossip-sync = { version = "0.0.110" }
base64 = "0.13.0"
bitcoin = "0.28.1"
secp256k1 = { version = "0.22", features = ["global-context", "recovery"] }
bitcoin-bech32 = "0.12" #remove if
hex = "0.3"
futures = "0.3"
chrono = "0.4" #remove if
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] } #remove if
core2 = { version = "0.3.0", optional = true, default-features = false }
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
lazy_static = "1.4.0"
flutter_rust_bridge = { version =  "1.38.0" }
anyhow = { version = "1.0.49" }

[build-dependencies]
flutter_rust_bridge_codegen = { version =  "1.38.0" }

[lib]
crate-type = ["staticlib", "cdylib"]