[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
flutter_rust_bridge_codegen = { version =  "1.38.0" }

[dependencies]
lightning = { version = "0.0.111", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.111", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.19" }
lightning-net-tokio = { version = "0.0.111" }
lightning-persister = { version = "0.0.111" }
lightning-background-processor = { version = "0.0.111" }
lightning-rapid-gossip-sync = { version = "0.0.111" }

base64 = "0.13.0"
bitcoin = "0.29.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"

futures = "0.3"
chrono = "0.4"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

lazy_static = "1.4.0"
flutter_rust_bridge = { version =  "1.38.0" }
anyhow = "1.0.65"


[lib]
crate-type = ["staticlib", "cdylib"]
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1